--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Scheduler</title>
   </head>
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <h1 class="display-3">Scheduler</h1>
+      <p class="lead">A calendar app for scheduling</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
