revised html, css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/83f0186682.css">
     <link rel="stylesheet" href="style.css" />
     <title>Scheduler</title>
   </head>
